prerobenie na sharovanie data types medzi front a backend, nova migracia bez PasswordJWT stlpca a drobne upravy v kode

--- a/InflaStoreWebAPI/InflaStoreWebAPI.csproj
+++ b/InflaStoreWebAPI/InflaStoreWebAPI.csproj
@@ -24,4 +24,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharedTypesLibrary\SharedTypesLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
