--- a/Neminaj/Neminaj.csproj
+++ b/Neminaj/Neminaj.csproj
@@ -81,6 +81,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\SharedTypesLibrary\SharedTypesLibrary.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Compile Update="Platforms\iOS\HttpClientService.cs">
 	    <ExcludeFromCurrentConfiguration>false</ExcludeFromCurrentConfiguration>
 	  </Compile>
