--- a/Neminaj/Neminaj.csproj
+++ b/Neminaj/Neminaj.csproj
@@ -133,6 +133,9 @@
 	  <MauiXaml Update="Views\PriceComparerView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\RegisterView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\SavedCartDetail.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
