added splashscreen and appicons

--- a/Neminaj/Neminaj.csproj
+++ b/Neminaj/Neminaj.csproj
@@ -50,7 +50,6 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
     
               
 		<!-- Splash Screen -->
@@ -70,9 +69,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Platforms\Android\Resources\values\strings.xml" />
 	  <None Remove="Platforms\Android\Resources\xml\network_security_config.xml" />
 	  <None Remove="Resources\AppIcon\inflastoresplashscreenv2.png" />
+	  <None Remove="Resources\AppIcon\inflastore_appicon.png" />
 	  <None Remove="Resources\Database\neminaj.db3" />
 	  <None Remove="Resources\ImagesEmbedded\billa_card.png" />
 	  <None Remove="Resources\ImagesEmbedded\kaufland_card.png" />
@@ -91,6 +90,10 @@
 	  <None Remove="Resources\Images\user_login.png" />
 	  <None Remove="Resources\Splash\inflastoresplashscreen.png" />
 	  <None Remove="Resources\Splash\inflastoresplashscreen.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiIcon Include="Resources\AppIcon\inflastore_appicon.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -201,10 +204,6 @@
 
 	<ItemGroup>
 	  <EmbeddedResource Include="Resources\ImagesEmbedded\billa_card.png" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <MauiIcon Include="Resources\AppIcon\inflastoresplashscreenv2.png" Color="White" />
 	</ItemGroup>
 
 </Project>
