--- a/InflaStoreWebAPI/InflaStoreWebAPI.csproj
+++ b/InflaStoreWebAPI/InflaStoreWebAPI.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Services\CompanyService\" />
+    <Folder Include="Services\ItemPriceService\" />
   </ItemGroup>
 
   <ItemGroup>
