pridanie JWT do api

--- a/InflaStoreWebAPI/appsettings.json
+++ b/InflaStoreWebAPI/appsettings.json
@@ -17,5 +17,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtConfig": {
+    "Secret": "EWxVMEssQSNhOw7B1TjAZMgwmkIyTAEkpVJFWPg8" // should me moved to Azure Key Valt
+  },
   "AllowedHosts": "*"
 }
