srpavene prepojenie na azure a treba sa zbavit exception so static file

--- a/InflaStoreWebAPI/appsettings.json
+++ b/InflaStoreWebAPI/appsettings.json
@@ -20,5 +20,9 @@
   "JwtConfig": {
     "Secret": "EWxVMEssQSNhOw7B1TjAZMgwmkIyTAEkpVJFWPg8" // should me moved to Azure Key Valt
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    // following connection is overwritten by Azure API Connection String in Azure portal
+    "InflastoreDBConnection": "Server=.\\INFLASTORE;Database=userdb;Trusted_Connection=true;TrustServerCertificate=True;"
+  }
 }
