--- a/InflaStoreWebAPI/InflaStoreWebAPI.csproj
+++ b/InflaStoreWebAPI/InflaStoreWebAPI.csproj
@@ -14,13 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="StaticFile\Companies\Logo\billa_logo.png" />
-    <Content Include="StaticFile\Companies\Logo\kaufland_logo.png" />
-    <Content Include="StaticFile\Companies\Logo\lidl_logo.png" />
-    <Content Include="StaticFile\Companies\Logo\tesco_logo.png" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MailKit" Version="4.1.0" />
@@ -43,6 +36,11 @@
   <ItemGroup>
     <None Include="wwwroot\EmailForgotPassword\EmailForgotPassword.html" />
     <None Include="wwwroot\EmailRegister\EmailRegister.html" />
+    <None Include="wwwroot\StaticFile\Companies\Logo\billa_logo.png" />
+    <None Include="wwwroot\StaticFile\Companies\Logo\kaufland_logo.png" />
+    <None Include="wwwroot\StaticFile\Companies\Logo\lidl_logo.png" />
+    <None Include="wwwroot\StaticFile\Companies\Logo\tesco_logo.png" />
+    <None Include="wwwroot\StaticFile\Inflastore\inflastore_logo.png" />
   </ItemGroup>
 
   <ItemGroup>
