--- a/Neminaj/Platforms/iOS/Info.plist
+++ b/Neminaj/Platforms/iOS/Info.plist
@@ -26,6 +26,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+  <key>UIUserInterfaceStyle</key> <!-- For light mode only -->
+  <string>Light</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsLocalNetworking</key>
