--- a/InflaStoreWebAPI/InflaStoreWebAPI.csproj
+++ b/InflaStoreWebAPI/InflaStoreWebAPI.csproj
@@ -14,6 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\StaticFile\Companies\ClubCard\billa_logo.png" />
+    <Content Remove="wwwroot\StaticFile\Companies\ClubCard\kaufland_logo.png" />
+    <Content Remove="wwwroot\StaticFile\Companies\ClubCard\lidl_logo.png" />
+    <Content Remove="wwwroot\StaticFile\Companies\ClubCard\other_card.png" />
+    <Content Remove="wwwroot\StaticFile\Companies\ClubCard\tesco_logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MailKit" Version="4.1.0" />
@@ -36,6 +44,11 @@
   <ItemGroup>
     <None Include="wwwroot\EmailForgotPassword\EmailForgotPassword.html" />
     <None Include="wwwroot\EmailRegister\EmailRegister.html" />
+    <None Include="wwwroot\StaticFile\Companies\ClubCard\billa_logo.png" />
+    <None Include="wwwroot\StaticFile\Companies\ClubCard\other_card.png" />
+    <None Include="wwwroot\StaticFile\Companies\ClubCard\kaufland_logo.png" />
+    <None Include="wwwroot\StaticFile\Companies\ClubCard\lidl_logo.png" />
+    <None Include="wwwroot\StaticFile\Companies\ClubCard\tesco_logo.png" />
     <None Include="wwwroot\StaticFile\Companies\Logo\billa_logo.png" />
     <None Include="wwwroot\StaticFile\Companies\Logo\kaufland_logo.png" />
     <None Include="wwwroot\StaticFile\Companies\Logo\lidl_logo.png" />
