--- a/Neminaj/Neminaj.csproj
+++ b/Neminaj/Neminaj.csproj
@@ -146,6 +146,9 @@
 	  <MauiXaml Update="ContentViews\ActivityIndicatorPopUp.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ContentViews\CartCounterControlView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ContentViews\CartViewSaveCartPopUp.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
