--- a/Neminaj/Neminaj.csproj
+++ b/Neminaj/Neminaj.csproj
@@ -109,6 +109,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BarcodeScanner.Mobile.Maui" Version="7.0.0.1-pre" />
 		<PackageReference Include="Camera.MAUI" Version="1.4.4" />
 		<PackageReference Include="ColorPicker.Maui" Version="1.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="6.0.0" />
@@ -120,7 +121,9 @@
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.6" />
 		<PackageReference Include="SQLitePCLRaw.lib.e_sqlite3.ios" Version="2.1.6" />
-		<PackageReference Include="Syncfusion.Maui.Barcode" Version="23.1.40" />
+		<PackageReference Include="Syncfusion.Maui.Barcode" Version="23.1.41" />
+		<PackageReference Include="ZXing.Net.Maui" Version="0.3.0-preview.1" />
+		<PackageReference Include="ZXing.Net.Maui.Controls" Version="0.3.0-preview.1" />
 	</ItemGroup>
 
 	<ItemGroup>
