--- a/Neminaj/Platforms/Android/AndroidManifest.xml
+++ b/Neminaj/Platforms/Android/AndroidManifest.xml
@@ -8,6 +8,8 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-permission android:name="android.permission.FLASHLIGHT" />
 	<uses-sdk android:minSdkVersion="21" />
 </manifest>
 <!-- <application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true"> android:networkSecurityConfig="@xml/network_security_config"-->
