--- a/Neminaj/Neminaj.csproj
+++ b/Neminaj/Neminaj.csproj
@@ -249,11 +249,20 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-android'">
+	  <PackageReference Include="Onion.Maui.GoogleMaps">
+	    <Version>5.0.1</Version>
+	  </PackageReference>
 	  <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3.android">
 	    <Version>2.1.6</Version>
 	  </PackageReference>
 	  <PackageReference Include="SQLitePCLRaw.provider.e_sqlite3.android">
 	    <Version>1.1.14</Version>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-ios'">
+	  <PackageReference Include="Onion.Maui.GoogleMaps">
+	    <Version>5.0.1</Version>
 	  </PackageReference>
 	</ItemGroup>
 
