--- a/Neminaj/Neminaj.csproj
+++ b/Neminaj/Neminaj.csproj
@@ -40,7 +40,7 @@
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 	  <DefineConstants>$(DefineConstants);__IOS__;__MOBILE__;__UNIFIED__;TRACE;DEBUG;NET;NET7_0;NETCOREAPP</DefineConstants>
-	  <BuildIpa>True</BuildIpa>
+	  <BuildIpa>False</BuildIpa>
 	  <IpaPackageName>Inflastore</IpaPackageName>
 	  <IpaIncludeArtwork>True</IpaIncludeArtwork>
 	  <MtouchUseLlvm>False</MtouchUseLlvm>
@@ -53,7 +53,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
-	  <BuildIpa>True</BuildIpa>
+	  <BuildIpa>False</BuildIpa>
 	  <IpaPackageName>Inflastore</IpaPackageName>
 	  <IpaIncludeArtwork>True</IpaIncludeArtwork>
 	  <MtouchDebug>True</MtouchDebug>
@@ -61,7 +61,7 @@
 
 	<PropertyGroup Condition="'$(TargetFramework)'=='net7.0-ios'">
 	  <CodesignKey>Apple Development: Created via API (C46DLTPT8X)</CodesignKey>
-	  <CodesignProvision>VS: WildCard Development</CodesignProvision>
+	  <CodesignProvision>VS: com.companyname.neminaj Development</CodesignProvision>
 	</PropertyGroup>
 
 	<!--<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-maccatalyst|AnyCPU'">
