--- a/Neminaj/Platforms/Android/AndroidManifest.xml
+++ b/Neminaj/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:supportsRtl="true" android:icon="@mipmap/inflastore_appicon" android:label="Inflastore">
+	<application android:allowBackup="true" android:supportsRtl="true" android:icon="@mipmap/appicon" android:label="Inflastore">
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDTndQJ2Z_W4QZnHUPvgkX2AC1LWfch5Ok" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,8 +8,8 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.CAMERA" />
-  <uses-permission android:name="android.permission.VIBRATE" />
-  <uses-permission android:name="android.permission.FLASHLIGHT" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.FLASHLIGHT" />
 	<uses-sdk android:minSdkVersion="21" />
 </manifest>
 <!-- <application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true"> android:networkSecurityConfig="@xml/network_security_config"-->
