--- a/Neminaj/Platforms/iOS/Info.plist
+++ b/Neminaj/Platforms/iOS/Info.plist
@@ -40,6 +40,8 @@
 	<key>CFBundleIdentifier</key>
 	<string></string>
 	<key>CFBundleDisplayName</key>
-	<string>Inflastore</string>
+	<string>XSAppIconAssets</string>
+  <key>Assets.xcassets/appicon.appiconset</key>
+  <string></string>
 </dict>
 </plist>
