update malych zmien

--- a/InflaStoreWebAPI/appsettings.json
+++ b/InflaStoreWebAPI/appsettings.json
@@ -3,12 +3,9 @@
     "Token": "my top secret key"
   },
   "EmailSettings": {
-    //"EmailHost": "smtp.ethereal.email",
-    //"EmailUserName": "ernestine78@ethereal.email",
-    //"EmailPassword": "KcrWzB2S7VhBGaevFF",
     "EmailHost": "smtp.endora.cz",
     "EmailUserName": "support@inflastore.sk",
-    "EmailPassword": "61d04*12A",
+    "EmailPassword": "NikomuNedat**;23",
     "EmailPort": "587"
   },
   "Logging": {
