zmeny v kode a zmena v api

--- a/InflaStoreWebAPI/appsettings.json
+++ b/InflaStoreWebAPI/appsettings.json
@@ -20,6 +20,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // following connection is overwritten by Azure API Connection String in Azure portal
-    "InflastoreDBConnection": "Server=.\\INFLASTORE;Database=userdb;Trusted_Connection=true;TrustServerCertificate=True;"
+    "InflastoreDBConnection": "Server=.\\INFLASTORE;Database=Inflastore;Trusted_Connection=true;TrustServerCertificate=True;"
   }
 }
