--- a/InflaStoreWebAPI/appsettings.json
+++ b/InflaStoreWebAPI/appsettings.json
@@ -5,7 +5,7 @@
   "EmailSettings": {
     "EmailHost": "smtp.endora.cz",
     "EmailUserName": "support@inflastore.sk",
-    "EmailPassword": "NikomuNedat**;23",
+    "EmailPassword": "NikomuNedat+-23",
     "EmailPort": "587"
   },
   "Logging": {
