--- a/Neminaj/N.csproj
+++ b/Neminaj/N.csproj
@@ -101,9 +101,9 @@
     <MauiImage Update="Resources\Images\logout_icon.svg" BaseSize="20,20" />
     <MauiImage Update="Resources\Images\recycle_bin.svg" BaseSize="20,20" />
     <MauiImage Update="Resources\Images\cart_button.png" BaseSize="20,20" />
-    
+    <MauiImage Update="Resources\Images\add_symbol_cart_view.svg" BaseSize="20,20" />
 
-		<!-- Custom Fonts -->
+    <!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
