pridanie first start up, treba dokoncit

--- a/Neminaj/N.csproj
+++ b/Neminaj/N.csproj
@@ -215,6 +215,9 @@
 	  <MauiXaml Update="Views\ChooseCardView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\FirstStartUpView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\ForgotPasswordView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
